@@ -14,7 +14,7 @@ class PanelizerNodeTest extends PanelizerTestHelper {
    */
   public static function getInfo() {
     return array(
-      'name' => 'Panelizer node tests (excluding IPE)',
+      'name' => 'Panelizer node workflow (excluding IPE)',
       'description' => 'Test entity bundle configuration settings, excluding IPE.',
       'group' => 'Panelizer',
     );
