@@ -85,6 +85,7 @@ By DamienMcKenna: Properly formatted all comments in the main module file.
   more normal, fixed MySQL 5.7 compatibility problems.
 #2136205 by Scott Robertson, DamienMcKenna: When using Content Translation to
   translate a panelized node, clone the Panelizer configuration.
+#2742601 by DamienMcKenna: Preparation for adding more tests.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
